--- a/web/plugin/estyle/index.css
+++ b/web/plugin/estyle/index.css
@@ -5,6 +5,14 @@
     background-color: #F0F4EF;
     font-family: 'Exo', sans-serif;
 }
+html{
+    height: 100%;
+}
+body{
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
+}
 .nav-bar__items{
     font-size: 1.5rem;
 }
@@ -19,10 +27,12 @@
     width: 60%;
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
 }
 .nav-bar__items li{
     text-decoration: none;
     list-style: none;
+    display: flex;
 }
 .nav-bar__items li a{
     text-decoration: none;
@@ -36,8 +46,17 @@ span{
     color: rgb(165, 16, 16);
 }
 .menu-despl{
-    visibility: hidden;
+    display: none;
+    top: 3.5rem;
+    
 }
 header  .nav-bar__items li:hover>ul{
-    visibility: visible;
+    display: initial;
+    position: absolute;
+}
+.contenidoU{
+    align-items: center;
+}
+footer{
+    margin-top: auto;
 }
